Modification du CSS pour les plus grands écrans et ajout de favicon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Chloe Touzani</title>
+    <link rel="icon" href="./Images/favicon.ico" />
     <script type="module" src="./script.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/0107cb8109.js" crossorigin="anonymous"></script>
