Ajout d'un formulaire Tally et du scroll-behavior smooth

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chloe Touzani</title>
     <link rel="icon" href="./Images/favicon.ico" />
     <script type="module" src="./script.js"></script>
@@ -82,7 +83,8 @@
         <p class="color">chloe.touzani11@gmail.com</p>
         <p>Je suis également disponible par téléphone entre 9h et 18h :</p>
         <p class="color">07 87 52 91 79</p>
-        <form>
+        <iframe data-tally-src="https://tally.so/embed/mV52Ag?hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="374" frameborder="0" marginheight="0" marginwidth="0" title="null"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
+        <!-- <form>
             <label for="name">Nom :</label>
             <input type="text" name="name" id="name">
             <label for="subject">Sujet :</label>
@@ -90,7 +92,7 @@
             <label for="message">Message :</label>
             <textarea name="message" id="message" cols="30" rows="10"></textarea>
             <input type="submit" value="Envoyer">
-        </form>
+        </form> -->
     </section>
 
     <footer>
